# Speedcubing_Timer_Rust

./: Cargo.toml
src/: clone.rs  main.rs
src/timer/: mod.rs  scramble.rs
