[package]
name = "speedcubing_timer"
version = "0.1.0"
authors = ["kamil <mich.kamil2601@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stopwatch = "0.0.7"
lazy_static = "1.4.0"
rand = "0.7.3"
num-traits = "0.2.11"
num-derive = "0.3.0"


[dependencies.gtk]
version = "0.8.0"

[dependencies.gio]
version = "0.8.0"

[dependencies.gdk]
version = "0.12.0"

[dependencies.glib]
version = "0.9.1"